--- a/Project.toml
+++ b/Project.toml
@@ -48,7 +48,7 @@ DiffEqNoiseProcess = "5.1"
 DiffEqSensitivity = "6.5"
 Distributions = "0.23, 0.24, 0.25"
 DocStringExtensions = "0.8"
-DomainSets = "0.5"
+DomainSets = "0.5, 0.6"
 Flux = "0.12.6"
 ForwardDiff = "0.10"
 GalacticOptim = "1, 2"
