--- a/Project.toml
+++ b/Project.toml
@@ -61,7 +61,7 @@ Reexport = "0.2, 1.0"
 RuntimeGeneratedFunctions = "0.5"
 SciMLBase = "1.9"
 StochasticDiffEq = "6.13"
-SymbolicUtils = "0.18, 0.19"
+SymbolicUtils = "0.18, 0.19, 0.20"
 Symbolics = "4"
 Tracker = "0.2"
 Zygote = "0.6"
